# AI-Workstation-Hub

./: .editorconfig  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ai_workstation_launcher.py  ai_workstation_settings.example.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  OPERATIONS.md
scripts/: build_exe.ps1  run.ps1
tests/: test_launcher.py
