[project]
name = "ai-workstation-hub"
version = "0.1.0"
description = "Portable Windows-native local AI workstation powered by Ollama, Hugging Face GGUF import, and a workspace-scoped coding agent."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = { text = "MIT" }
authors = [{ name = "Nathaniel Martin" }]
keywords = ["ollama", "huggingface", "local-llm", "gradio", "coding-agent", "windows"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Win32 (MS Windows)",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "gradio>=3.50,<6",
  "requests>=2.31",
  "nvidia-ml-py>=12.535",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "pyinstaller>=6.6"]

[tool.ruff]
line-length = 140
target-version = "py310"
exclude = [".ai_workstation_venv", "runtime", "models", "logs", "dist", "build"]

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501", "B007", "B008", "B904"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
